# COTS-Capsule-Simulation

./: README.md  exclude_sync  init_geant_config_script.txt  run_instance.sh  run_spot_instance.sh  run_spot_instances.py  sync.sh
Full_Detector/Sim/: CMakeLists.txt  GNUmakefile  History  README  Sim.cc  Sim.in  Sim.out  cerenkov.mac  wls.mac
Full_Detector/Sim/include/: DetectorConstruction.hh  FilePrinter.hh  Hit.hh  PrimaryGeneratorAction.hh  SD.hh  SimActionInitialization.hh  SimBKF12.hh  SimDetectorConstruction.hh  SimDetectorMessenger.hh  SimEventAction.hh  SimEventMessenger.hh  SimHistoManager.hh  SimMainVolume.hh  SimPMTHit.hh  SimPMTSD.hh  SimPhysics.hh  SimPrimaryGeneratorAction.hh  SimRun.hh  SimRunAction.hh  SimScintHit.hh  SimScintSD.hh  SimStackingAction.hh  SimSteppingAction.hh  SimSteppingMessenger.hh  SimTrackingAction.hh  SimTrajectory.hh  SimUserTrackInformation.hh  TrackingAction.hh
Full_Detector/Sim/src/: DetectorConstruction.cc  FilePrinter.cc  Hit.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SD.cc  SimActionInitialization.cc  SimBKF12.cc  SimDetectorConstruction.cc  SimDetectorMessenger.cc  SimEventAction.cc  SimEventMessenger.cc  SimHistoManager.cc  SimMainVolume.cc  SimPMTHit.cc  SimPMTSD.cc  SimPhysics.cc  SimPrimaryGeneratorAction.cc  SimRun.cc  SimRunAction.cc  SimScintHit.cc  SimScintSD.cc  SimScintSD.cc.save  SimStackingAction.cc  SimSteppingAction.cc  SimSteppingMessenger.cc  SimTrackingAction.cc  SimTrajectory.cc  SimUserTrackInformation.cc  TrackingAction.cc
RunScripts/: Sim.sh  anti_muon.json  example.json  example_aviv.json  example_one_song_hero.json  final_results_16_32_31_12.csv  ion.json  ion_and_electron.json  make_data.py  mapping.csv  muon.json  new_file.py  proton.json  proton_and_electron.json  run_data.py  run_data_threads.py  run_data_threads_parser_to_SAT_data.py  run_script_Cosmic_Ray_Sim.py  thread_worker.py
RunScripts/DataAnalysis/: Untitled-1.py  Untitled-2.py  angle_calculator.py  results.csv  results_2.csv
data_service/: config.ini  data_loader.py  data_service.py
etc/systemd/system/: start-geant4-sim.service
